added AdmineDashboard partly

--- a/backend/views/register.hbs
+++ b/backend/views/register.hbs
@@ -34,7 +34,15 @@
                     <span>Teacher</span>
                 </label>
             </p>
-        </div>
+            <!--<p>
+                <label>
+                    <input name="role" value="admin" type="radio" required> 
+                    <span>Admin</span>
+                </label>
+            </p>-->
+              <!--isWorking???|-->
+              
+                    </div>
 
         <div class="row">
             <div class="input-field col s12">
